--- a/js/app/templates/templates.html
+++ b/js/app/templates/templates.html
@@ -1,7 +1,7 @@
 <script type="text/template" id="movie">
-    <div class="rating"><%= rating %></div>
+    <div class="rating"><%- rating %></div>
     <figure>
-        <img src="<%= img %>" alt="<%= name %>"/>
+        <img src="<%- img %>" alt="<%- name %>"/>
     </figure>
-    <h4><%= title %></h4>
+    <h4><%- title %></h4>
 </script>
