--- a/css/style.less
+++ b/css/style.less
@@ -1,4 +1,9 @@
+* {
+  box-sizing: border-box;
+}
 body {
+  color: #222;
+  font-family: Tahoma, Arial, sans-serif;
   .spinner {
     position: fixed;
     top: 30px;
@@ -8,5 +13,82 @@ body {
     font-size: 25px;
     padding-top: 200px;
     text-align: center;
+  }
+  .container {
+    text-align: justify;
+    &:after {
+      content: "";
+      display: inline-block;
+      visibility: hidden;
+      width: 100%;
+    }
+    .title {
+      text-align: center;
+      font-size: 18px;
+      font-weight: bold;
+      width: 185px;
+      margin: auto;
+      position: absolute;
+      bottom: 19px;
+      left: 50%;
+      margin-left: -92.5px;
+      color: #fff;
+      background-color: rgba(0,0,0,0.5);
+      padding: 5px;
+      text-shadow: 0 -1px 1px #000;
+    }
+    .lang {
+      position: absolute;
+      top: 10px;
+      padding: 10px;
+      background: #FDDF45;
+      border-radius: 50%;
+      font-weight: 600;
+      border: 5px solid #FFF;
+      left: 56px;
+    }
+    .rating {
+      position: absolute;
+      top: 16px;
+      right: 64px;
+      padding: 10px;
+      background: #FDDF45;
+      font-weight: 600;
+    }
+  }
+  .item_film {
+    vertical-align: top;
+    position: relative;
+    display: inline-block;
+    width: 20%;
+    cursor: pointer;
+    figure {
+      text-align: center;
+    }
+    &:hover .title {
+      color: #FDDF45;
+    }
+  }
+  .active_pop {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0,0,0, 0.5);
+    .close_active {
+      position: absolute;
+      right: 15px;
+      top: 5px;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 35px;
+      color: #fff;
+      transition: all 0.1s ease;
+      cursor: pointer;
+      &:hover {
+        opacity: 0.7;
+      }
+    }
   }
 }
