--- a/css/style.less
+++ b/css/style.less
@@ -83,9 +83,13 @@ body {
       .left_row, .right_row {
         border: 1px solid red;
         display: inline-block;
+        vertical-align: top;
       }
       .left_row {
         width: 300px;
+        .active_pop__title {
+          text-align: center;
+        }
       }
       .right_row {
         width: 75%;
