--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,6 @@ body .active_pop .active_pop__info {
 }
 body .active_pop .active_pop__info .left_row,
 body .active_pop .active_pop__info .right_row {
-  border: 1px solid red;
   display: inline-block;
   vertical-align: top;
 }
@@ -94,9 +93,20 @@ body .active_pop .active_pop__info .left_row {
 }
 body .active_pop .active_pop__info .left_row .active_pop__title {
   text-align: center;
+  padding: 5px;
 }
 body .active_pop .active_pop__info .right_row {
   width: 75%;
+}
+body .active_pop .active_pop__info .right_row table {
+  border-collapse: collapse;
+}
+body .active_pop .active_pop__info .right_row table td {
+  padding: 5px;
+  border-bottom: 1px solid #ededed;
+}
+body .active_pop .active_pop__info .right_row table td:first-child {
+  border-right: 1px solid #ededed;
 }
 body .active_pop .close_active {
   position: absolute;
@@ -116,6 +126,10 @@ body .active_pop .active_pop__poster {
   width: 240px;
   height: 360px;
   overflow: hidden;
+  margin: 10px auto;
+}
+body .active_pop .active_pop__poster figure {
+  margin: 10px auto;
 }
 body .active_pop .active_pop__poster img {
   max-width: 100%;
