add bg for film preview

--- a/css/style.less
+++ b/css/style.less
@@ -76,6 +76,7 @@ body {
     left: 0;
     right: 0;
     background-color: rgba(0,0,0, 0.5);
+    background-size: cover;
     .active_pop__info {
       background-color: #fff;
       margin: 45px 100px;
