--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ body .active_pop {
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  background-size: cover;
 }
 body .active_pop .active_pop__info {
   background-color: #fff;
